web/wp-content/themes/cncf-twenty-two/source/scss/components/_people.scss
.people-wrapper {
	display: grid;
	grid-row-gap: 40px;
	grid-column-gap: 30px;
	grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
}

.person {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	background-color: $white;
	filter: drop-shadow(0px 2px 10px rgba(0, 0, 0, 0.05));
	border-radius: 3px;

	button.button-reset {
		width: 100%;
		text-align: left;
		&:hover {
			.person__name {
				color: $primary-color;
			}
		}
	}

	&__image {
		display: block;
		height: auto;
		width: 100%;
		img {
			object-fit: cover;
			width: 100%;
			height: 280px;
			@media (min-width: 1200px) {
				height: 230px;
			}
			border-top-left-radius: 3px;
			border-top-right-radius: 3px;
			// &:hover {
			// 	opacity: 0.9;
			// 	transition: opacity 0.25s ease-in;
			// }
		}
	}

	&__padding {
		width: 100%;
		height: 100%;
		padding: 0px 12px 24px 18px;
		display: flex;
		flex-direction: column;
		align-items: flex-start;
	}
	&__name {
		margin-top: 30px;
		@media (min-width: 1200px) {
			margin-top: 24px;
		}
	}
	&__pronouns {
		margin-top: 10px;
		font-weight: 700;
		font-size: 10px;
		line-height: 140%;
		color: $gray-700;
	}

	&__company {
		margin-top: 10px;
		@media (min-width: 1200px) {
			margin-top: 16px;
		}
		font-size: 16px;
		line-height: 140%;
		color: $gray-700;
	}

	&__social {
		margin-top: auto;

		a {
			display: inline-block;
			&:hover {
				svg {
					transition: color 0.25s ease-in;
					color: $primary-color;
				}
			}
		}

		svg {
			height: 30px;
			width: auto;
			color: $black;
		}

		&-margin {
			margin-top: 50px;
		}
	}

	&__content {
		margin-top: 30px;
	}
}

// person modal.
.person-modal {
	position: fixed;
	background: $white;
	z-index: 667;
	border: 0;
	overflow: auto;
	min-height: 300px;
	max-height: 100%;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	max-width: 100%;

	@media (min-width: 768px) {
		top: 50%;
		left: 50%;
		width: 75%;
		max-width: 800px;
		height: 70vh;
		min-height: 300px;
		max-height: 800px;
		transform: translate(-50%, -40%);
		padding: 0;
	}

	&-close__wrapper {
		@media (max-width: 767px) {
			position: sticky;
			top: -14px;
			width: calc(100% - 1em);
			z-index: 99;
			background-color: $white;
			display: flex;
			justify-content: flex-end;
		}
	}

	&-close {
		background: $white;
		width: 50px;
		height: 50px;
		border: none;
		border-radius: 0;
		cursor: pointer;
		display: inline-block;
		@media (min-width: 768px) {
			position: absolute;
			top: 0px;
			right: 5px;
		}

		@media (min-width: 1000px) {
			top: -1px;
			right: 6px;
		}
		&::before {
			content: '';
			display: block;
			position: relative;
			background: url('../images/icon-close.svg');
			background-size: 25px 25px;
			background-repeat: no-repeat;
			background-position: center center;
			background-color: $black;
			width: 40px;
			height: 40px;
			z-index: 100;
			top: 0;
			left: 0;
			outline: none;
			cursor: pointer;
			opacity: 1;
			@media (min-width: 1000px) {
				width: 50px;
				height: 50px;
			}
		}

		&:hover {
			&::before {
				opacity: 0.5;
			}
		}

		&:focus,
		&:hover,
		&:active {
			outline-color: $link-hover;
			color: $black;
		}

		&-overlay[data-background-click='disabled'] {
			cursor: auto;
		}
	}

	&__content {
		p:not(:last-child) {
			margin-bottom: 20px;
		}
		@media (min-width: 768px) {
			padding: 0;
			font-size: 12px;
		}
		a {
			color: $primary-color;
			font-weight: 700;
			transition: all 0.25s ease-out;
		}

		@media (min-width: 768px) {
			.person__image {
				flex-shrink: 0;
				width: 155px;
				@media (min-width: 1000px) {
					width: 310px;
				}
				img {
					border-top-left-radius: 0px;
					border-top-right-radius: 0px;
					object-fit: cover;
					height: 155px;
					width: 155px;
					@media (min-width: 1000px) {
						height: 310px;
						width: 310px;
					}
				}
			}

			.person__social {
				margin-top: 40px;
			}
		}
	}
}

